# port_scanner

Downloads/aiautodashdev-main/: .flake8  .isort.cfg  .pre-commit-config.yaml  CICD_GUIDE.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
Downloads/aiautodashdev-main/.github/workflows/: ci.yml  codeql.yml  deploy.yml  docker.yml
Downloads/aiautodashdev-main/tests/: __init__.py  conftest.py  test_agents.py  test_api.py
deepmcp-integration/: .stignore  MCP_INTEGRATION_COMPLETE.md  SYNC_TEST.md  deepmcp_api_service.py  docker-compose.openwebui.yml  docker-compose.vllm.yml  mcp_integration_hub.py  mcp_integration_hub.py.backup  openwebui_functions.py  openwebui_mcp_config.py  test_mcp_server.py  vllm-mcp-bridge.service  vllm_mcp_bridge.py  vllm_mcp_config.py
network-d3js/: fortios_api_discovery.py  pyproject.toml  refactor_from_Flask_to_uv_and_FastAPI.md
network-d3js/app/: main.py
network-d3js/app/services/: fortigate.py
network-d3js/app/utils/: paths.py
network-d3js/icons/: icons_manifest.json
network-d3js/icons/Fortinet VSS/: FortiAP Series_R8_2025Q2.vss  FortiSwitch_Series_R14_2025Q2.vss  Fortinet_Icons_new_R2_2025Q2.vss
network-d3js/icons/Meraki SVGs/: _Product SVG Upload Tracker (Updated 2_5_25)_.xlsx
network-d3js/static/: index.html
wg++/: apply_pattern_to_csv.py  bulk_generate_mapping.py  count_epg.py  create_region_mappings.py  extract_channels_csv.py  generate_m3u.py  merge_mapping_to_m3u.py  placeholder_m3u.py
